--- a/css/grilla.css
+++ b/css/grilla.css
@@ -1,1 +1,300 @@
+/*Universal*/
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+/*General*/
+body {
+  font-size: 21px;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  min-width: 320px;
+  max-width: 1200px;
+  background-color: #f5f5f5;
+}
 
+/*CONTENEDOR-IZQUIERDO*/
+#principal {
+  clear:both;
+  width: 20%;
+  float: left;
+  padding: 0.5em;
+  margin-top: 1.5rem;
+}
+
+/*Todos los "ol" de MENU*/
+#MENU ol{
+  list-style:none;
+    text-align: center;
+}
+/*Todos los "a" de MENU*/
+#MENU a{
+    color:#000021;
+    font-weight:bold;
+  }
+/*Foto de perfil de MENU*/
+.FOTO{
+    border-radius:50%;
+    display:block;
+    margin:auto;
+    border-right: 1px solid rgba(51, 0, 255, 0.55);
+    border-left: 4px solid rgba(51, 0, 255, 0.55);
+    border-bottom: 2px solid rgba(51, 0, 255, 0.55);
+    width:130px;
+  }
+
+/*CONTENEDOR-DERECHO*/
+  #secundario {
+    width: 80%;
+    float: left;
+    padding: 0.5em;
+  }
+  /*Contenedor "PRESENTACION"*/
+#PRESENTACION{
+  padding-left: 2rem;
+  padding-right: 2rem;
+  padding-top: 0.1rem;
+  border-radius: 10px;
+  padding-bottom: 2rem;
+  background-color:white;
+  margin-bottom: 0.5rem;
+  }
+
+#CONOCIMIENTOS-ADQUIERIDOS{
+  padding-left: 2rem;
+  padding-right: 2rem;
+  border-radius: 10px;
+  padding-bottom: 2rem;
+padding-top: 0.1rem;
+  background-color:white;
+    margin-bottom: 0.5rem;
+}
+
+.ENCUADRE-TITULOS1{
+  border-radius: 20px;
+  border: 2px solid rgba(0, 0, 0, 0.38);
+  border-bottom: 4px solid rgba(0, 0, 0, 0.38);
+  text-align: center;
+  margin: 10px;
+}
+
+#EXPERIENCIA{
+  padding-left: 2rem;
+  padding-right: 2rem;
+  padding-top: 0.1rem;
+  border-radius: 10px;
+  padding-bottom: 2rem;
+
+  background-color:white;
+
+}
+
+#FORMACION{
+  padding-left: 2rem;
+  padding-right: 2rem;
+  padding-top: 0.1rem;
+  padding-bottom: 2rem;
+  border-radius: 10px;
+  background-color:white;
+    margin-bottom: 0.5rem;
+}
+
+li p{
+
+    font-size:17px;}
+p{
+  font-size:18px;
+}
+.circle {
+    list-style-type: circle;
+    margin-left: 0rem;
+  }
+  .circle p{
+    font-weight:bold;
+      font-size: 18px;
+  }
+
+.SIN-STYLE li{
+  margin:0px;
+  padding:0.5rem;
+  list-style:none;
+}
+
+h1{
+  font-size: 30px;
+}
+#PRESENTACION h2{
+  margin-top: 20px;
+  margin-bottom: 25px;
+  font-size: 27px;
+}
+#CONOCIMIENTOS-ADQUIERIDOS h2{
+  margin-top: 20px;
+  margin-bottom: 25px;
+  font-size: 27px;
+}
+/*Todos los ENCUADRE-TITULOS "Pablo Ariel López CV"*/
+
+  .ENCUADRE-TITULOS{
+    border-radius: 20px;
+    border: 3px solid rgba(0, 0, 0, 0.38);
+    border-bottom: 5px solid rgba(0, 0, 0, 0.38);
+    text-align: center;
+    margin: 10px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+/*Todos los ENCUADRES "PRESENTACION"*/
+  .ENCUADRE {
+    border-radius: 80px 20px;
+    border: 3px solid #25A2D7;
+    border-bottom: 6px solid #25A2D7;
+    text-align: center;
+    margin: 10px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+/*Todos los SUBRAYADOS-PUNTEADOS*/
+.SUBRAYADO-PUNTEADO li{
+  list-style-type: none;
+  font-weight:bold;
+  border-color:red;
+  border-bottom: 1px dotted rgba(21, 51, 88, 0.68);
+  margin-bottom:3px;
+  font-size: 15px;
+}
+h4{
+  text-decoration: underline;
+  color: black;
+  font-size: 21px;
+  padding-bottom: 5px;
+  padding-top: 5px;
+}
+
+@media screen and (max-width: 400px) {
+.ENCUADRE{
+  border: none;
+
+}
+.ENCUADRE-TITULOS{
+  border: none;
+  border: 4px solid rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+}
+.SIN-STYLE li{
+  text-align: center;
+  padding: 0.5rem;
+}
+.circle li{
+  font-weight: bold;
+  text-align: center;
+list-style: none;
+}
+}
+
+
+@media screen and (max-width: 500px) {
+  #principal, #secundario, #terciario {
+    float: none;
+    width: 100%;
+  }
+
+}
+@media screen and (max-width: 950px) {
+  #principal, #secundario {
+    float: none;
+    width: 100%;
+  }
+
+  h4{
+    font-size: 20px;
+  }
+  h1{
+    font-size: 27px;
+  }
+  h3{
+    font-size: 23px;
+  }
+  .circle li p{
+    font-size: 18px;
+    text-align: center;
+  }
+
+#principal{
+  padding-left: 2rem;
+  padding-right: 2rem;
+  border-radius: 10px;
+  background-color:white;
+  }
+}
+@media screen and (max-width: 240px) {
+  #principal, #secundario {
+    float: none;
+    width: 100%;
+  }
+
+#principal{
+  padding-left: 2rem;
+  padding-right: 2rem;
+  border-radius: 10px;
+  background-color:white;
+  }
+
+.SUBRAYADO-PUNTEADO li{
+font-size: 0.9rem;
+text-align:center;
+
+}
+
+.ENCUADRE-TITULOS{
+  font-size: 1.2rem;
+}
+
+.ENCUADRE {
+  border: none ;
+font-size: 1.2rem;
+}
+
+h4{
+  text-align:center;
+  font-size: 1.1rem;
+}
+
+.SIN-STYLE li{
+  text-align: center;
+}
+
+p{  text-align: center;
+}
+
+.circle {
+  text-align: center;
+  }
+  .circle p{
+      text-align: center;
+  }
+.ENCUADRE-TITULOS1{
+  border: none;
+text-align: left;
+  padding-left: 0.7rem;
+  font-size: 1.2rem;
+}
+
+}
+@media screen and (max-width: 320px) {
+  #principal, #secundario {
+    float: none;
+    width: 100%;
+  }
+
+  .ENCUADRE-TITULOS1{
+    text-align: left;
+
+    border: none;
+  }
+  .ENCUADRE {
+    border: none;
+  }
+}
